# ppt_skills

./: .env.example  .gitignore  README.md  REFERENCES.md  pyproject.toml  requirements.txt  test2.md  tst.md
artifacts/superpowers/: brainstorm.md  plan.md
notebooks/: test_layout_detection.ipynb
src/: main.py  models.py  reporter.py
src/detectors/: alignment.py  aspect_ratio.py  contrast.py  hierarchy.py  margin.py
src/parsers/: xml_parser.py
src/validators/: vlm_validator.py
