[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layout-error"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=0.6.21",
    "pydantic>=2.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "unstructured[pptx]>=0.10",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
